package command;

import "box2d.proto";


message DualStickRawInputCommand
{
    required box2d.PbVec2 pbv2Move = 1;
    required box2d.PbVec2 pbv2Shoot = 2;
}
