package usx.geofactions;

import "EntityGameEventBuffer.proto";


message GameEventBuffer
{
	enum GameEventBufferType
	{
        UNKNOWN = 0;
		ENTITY = 1;
	}
	required GameEventBufferType type = 1 [default = UNKNOWN];
	
    optional EntityGameEventBuffer entityGameEventBuffer = 2;
}
